--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@material-ui/icons": "^4.5.1",
     "cloudinary-react": "^1.2.1",
     "clsx": "latest",
-    "next": "latest",
+    "isomorphic-unfetch": "^3.0.0",
+    "next": "^9.2.1",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
