--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "clsx": "latest",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.1",
-    "prop-types": "latest",
+    "prop-types": "^15.7.2",
     "react": "latest",
     "react-dom": "latest",
-    "react-simple-image-slider": "^1.0.2"
+    "react-simple-image-slider": "^1.0.2",
+    "react-swipeable-views": "^0.13.8",
+    "react-swipeable-views-utils": "^0.13.7"
   },
   "scripts": {
     "dev": "next",
