add api route next imovel

--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@material-ui/icons": "^4.5.1",
     "cloudinary-react": "^1.2.1",
     "clsx": "latest",
+    "firebase-admin": "^8.9.2",
     "isomorphic-unfetch": "^3.0.0",
+    "mongodb": "^3.5.4",
+    "mongoose": "^5.9.3",
     "next": "^9.2.1",
+    "next-connect": "^0.6.0",
     "prop-types": "^15.7.2",
     "react": "latest",
     "react-dom": "latest",
