--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.5.1",
-    "cloudinary-react": "^1.2.1",
     "clsx": "latest",
-    "firebase-admin": "^8.9.2",
     "isomorphic-unfetch": "^3.0.0",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.3",
@@ -18,7 +16,9 @@
     "react-dom": "latest",
     "react-simple-image-slider": "^1.0.2",
     "react-swipeable-views": "^0.13.8",
-    "react-swipeable-views-utils": "^0.13.7"
+    "react-swipeable-views-utils": "^0.13.7",
+    "swr": "^0.1.18",
+    "unfetch": "^4.1.0"
   },
   "scripts": {
     "dev": "next",
