--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.5.1",
     "clsx": "latest",
+    "dotenv-load": "^2.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.3",
     "next": "^9.2.1",
     "next-connect": "^0.6.0",
+    "next-env": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "latest",
     "react-dom": "latest",
