--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "next": "^9.2.1",
     "next-connect": "^0.6.0",
     "next-env": "^1.1.0",
+    "next-redux-wrapper": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-redux": "^7.2.0",
     "react-simple-image-slider": "^1.0.2",
     "react-swipeable-views": "^0.13.8",
     "react-swipeable-views-utils": "^0.13.7",
+    "redux": "^4.0.5",
     "swr": "^0.1.18",
     "unfetch": "^4.1.0"
   },
