--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-swipeable-views-utils": "^0.13.7",
     "redux": "^4.0.5",
     "regenerator-runtime": "^0.13.5",
+    "sweetalert2": "^9.10.8",
     "swr": "^0.1.18",
     "unfetch": "^4.1.0"
   },
